Fix card post view alignment

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,10 +1,8 @@
 /* stylelint-disable selector-list-comma-newline-after */
 
-
-
 .blog-header {
   line-height: 1;
-  border-bottom: 1px solid rgb(229,229,229);
+  border-bottom: 1px solid rgb(229, 229, 229);
 }
 
 .blog-header-logo {
@@ -16,13 +14,19 @@
   text-decoration: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: "Playfair Display", Georgia, "Times New Roman", serif;
 }
 
 .display-4 {
   font-size: 2.5rem;
 }
+
 @media (min-width: 768px) {
   .display-4 {
     font-size: 3rem;
@@ -67,24 +71,38 @@ h1, h2, h3, h4, h5, h6 {
   flex: 0 0 auto;
 }
 
-.h-250 { height: 250px; }
-@media (min-width: 768px) {
-  .h-md-250 { height: 250px; }
+.h-250 {
+  height: 250px;
 }
 
-.border-top { border-top: 1px solid #e5e5e5; }
-.border-bottom { border-bottom: 1px solid #e5e5e5; }
+@media (min-width: 768px) {
+  .h-md-250 {
+    height: 250px;
+  }
+}
 
-.box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
+.border-top {
+  border-top: 1px solid #e5e5e5;
+}
+
+.border-bottom {
+  border-bottom: 1px solid #e5e5e5;
+}
+
+.box-shadow {
+  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+}
 
 /*
  * Blog name and description
  */
+
 .blog-title {
   margin-bottom: 0;
   font-size: 2rem;
   font-weight: 400;
 }
+
 .blog-description {
   font-size: 1.1rem;
   color: #999;
@@ -97,23 +115,28 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* Pagination */
+
 .blog-pagination {
   margin-bottom: 4rem;
 }
-.blog-pagination > .btn {
+
+.blog-pagination>.btn {
   border-radius: 2rem;
 }
 
 /*
  * Blog posts
  */
+
 .blog-post {
   margin-bottom: 4rem;
 }
+
 .blog-post-title {
   margin-bottom: .25rem;
   font-size: 2.5rem;
 }
+
 .blog-post-meta {
   margin-bottom: 1.25rem;
   color: #999;
@@ -122,6 +145,7 @@ h1, h2, h3, h4, h5, h6 {
 /*
  * Footer
  */
+
 .blog-footer {
   padding: 2.5rem 0;
   color: #999;
@@ -129,6 +153,7 @@ h1, h2, h3, h4, h5, h6 {
   background-color: #f9f9f9;
   border-top: .05rem solid #e5e5e5;
 }
+
 .blog-footer p:last-child {
   margin-bottom: 0;
 }
